feat: seeing ourself

--- a/work_phase_3/reflective_design.html
+++ b/work_phase_3/reflective_design.html
@@ -49,12 +49,12 @@
                     This is the Reflective design aspect of the FeedCrumbs website
                 </h3>
                 <p class="m-b-8">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur molestias impedit distinctio
-                    corporis quia fugiat voluptas quidem velit nihil necessitatibus?
+                    This page will consist of Values Mapping, Identity, Emotional Tone, Imagery Examples,
+                    Language & Expression, Language Reflection Checklist, and Seeing Ourselves in the Interface.
                 </p>
             </header>
 
-            <section class="base-card m-b-12">
+            <section class="base-card m-b-4">
                 <h3 class="m-b-6">Values Mapping</h3>
                 <table class="reflective-table">
                     <thead>
@@ -168,13 +168,19 @@
 
                                     <br>
                                     <br>
-                                    <img src="../work_phase_3/assets/imagery-1.png" class="small-responsive-img">
+                                    <img src="../work_phase_3/assets/imagery-1.png" class="small-responsive-img"
+                                        alt="First image of a group of diverse people happily sharing food and drinks at a table">
                                     <br>
                                     <br>
-                                    <img src="../work_phase_3/assets/imagery-2.webp" class="small-responsive-img">
+                                    <img src="../work_phase_3/assets/imagery-2.webp" class="small-responsive-img"
+                                        alt="Second example of an image of a group of diverse people happily sharing food and drinks at a table">
+
+                                    >
                                     <br>
                                     <br>
-                                    <img src="../work_phase_3/assets/imagery-3.png" class="small-responsive-img">
+                                    <img src="../work_phase_3/assets/imagery-3.png" class="small-responsive-img"
+                                        alt="Third example of an image of a group of diverse people happily sharing food and drinks at a table">
+                                    >
                                     <br>
 
                                     As shown in the images above, the imagery aligned with the intended emotional tone
@@ -208,10 +214,12 @@
                                 </p>
                                 <br>
                                 <br>
-                                <img src="../work_phase_3/assets/with-text.png" class="small-responsive-img">
+                                <img src="../work_phase_3/assets/with-text.png" class="small-responsive-img"
+                                    alt="Example of homepage text with an image of a group of diverse people happily sharing food and drinks at a table">
                                 <br>
                                 <br>
-                                <img src="../work_phase_3/assets/with-text-2.png" class="small-responsive-img">
+                                <img src="../work_phase_3/assets/with-text-2.png" class="small-responsive-img"
+                                    alt="Second example of homepage text with an image of a group of diverse people happily sharing food and drinks at a table">
                             </div>
                         </div>
                         <div class="accordion-item m-b-4">
@@ -293,7 +301,26 @@
                     </div>
 
                 </div>
+
             </section>
+
+            <section class="accordion p-t-8">
+                <div class="accordion-item open">
+                    <button class="accordion-header">▷ Seeing Ourselves in the Interface</button>
+                    <div class="accordion-content">
+                        <div id="community-list">
+                        </div>
+                        <div class="community-card m-b-3">
+                            <div class="community-card-body">
+                                <h4 class="community-card-title">Dwiputra Sam</h4>
+                                <p class="community-card-text">Hi My Name is Sam</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
 
             <div class="p-y-16"></div>
     </main>
