--- a/work_phase_3/reflective_design.html
+++ b/work_phase_3/reflective_design.html
@@ -126,26 +126,42 @@
                 </table>
             </section>
 
+            <section class="m-t-12">
+                <h3 class="m-t-8 m-b-2">
+                    Identity, Emotional Tone, Imagery Examples, Language & Expression, and Language Reflection
+                    Checklist
+                </h3>
+                <p class="m-b-4">
+                    This Accordion component below will show the Values Mapping, Identity, Emotional Tone, Imagery
+                    Examples, Language & Expression, and Language Reflection Checklist that I have created for
+                    the FeedCrumbs website.
+                </p>
+            </section>
+
             <section class="accordion">
                 <div class="accordion-item open">
                     <button class="accordion-header">▷ Identity, Emotional Tone, Imagery, and Language</button>
                     <div class="accordion-content">
                         <p class="m-b-3">
-                            Based on everything we have created so far, I will create the website identity, emotional
-                            tone, imagery examples, and language & expression, in order to make users can see themself
-                            in the website.
+                            Based on everything we have created so far, I will create the website identity,
+                            emotional tone, imagery examples, and language & expression, in order to make users can see
+                            themself in the website.
                         </p>
                         <div class="accordion-item m-b-4">
                             <button class="accordion-header">▷ Identity</button>
                             <div class="accordion-content">
                                 <p>
                                     I want to revolve the website identity around "An inclusive platform that foster
-                                    meaningful connections through self expression". There are three keywords, the first
+                                    meaningful connections through self expression". There are three keywords, the
+                                    first
                                     is "Inclusive", which means the
                                     website should be designed to be inclusive, so that people from different
-                                    background, will feel safe and respected in order to do the second keyword, "Self
-                                    Expression", which is the way for people to show their true self, and in this case,
-                                    expresing themself through their cultural cuisine, and by doing so, they can do the
+                                    background, will feel safe and respected in order to do the second keyword,
+                                    "Self
+                                    Expression", which is the way for people to show their true self, and in this
+                                    case,
+                                    expresing themself through their cultural cuisine, and by doing so, they can do
+                                    the
                                     third keyword, which is to create "meaningful connections" with other
                                     people/community in the platform.
                                 </p>
@@ -164,7 +180,8 @@
                                     <br>
                                     <br>
 
-                                    Here are some examples of imagery that can be used to reflect these emotional tones:
+                                    Here are some examples of imagery that can be used to reflect these emotional
+                                    tones:
 
                                     <br>
                                     <br>
@@ -183,14 +200,18 @@
                                     >
                                     <br>
 
-                                    As shown in the images above, the imagery aligned with the intended emotional tone
-                                    and identity we want to create. Several important aspects of the images is first,
-                                    there are diversity among the people shown in the images, in terms of culture, age,
+                                    As shown in the images above, the imagery aligned with the intended emotional
+                                    tone
+                                    and identity we want to create. Several important aspects of the images is
+                                    first,
+                                    there are diversity among the people shown in the images, in terms of culture,
+                                    age,
                                     and the cuisines variety. Also, warm colors in the image create a welcoming
                                     atmosphere while also supported the proud face expression of the people
                                     in the images, which is joyful and proud of their culture. Their eyes and body
                                     language is also either directed to the camera, showing "inviting" vibes, or
-                                    directed to each other, showing genuine interactions and connections. Personally, my
+                                    directed to each other, showing genuine interactions and connections.
+                                    Personally, my
                                     favorite is the first image as it checklist all my intended emotional tone and
                                     identity.
                                 </p>
@@ -200,14 +221,17 @@
                             <button class="accordion-header">▷ Language & Expression and its relation to Imagery
                                 Used</button>
                             <div class="accordion-content">
-                                <p>One example of homepage text that I will be using is "Express Yourself, and Connect
-                                    With the World" Through this message, I intend to straightforwardly invite users to
+                                <p>One example of homepage text that I will be using is "Express Yourself, and
+                                    Connect
+                                    With the World" Through this message, I intend to straightforwardly invite users
+                                    to
                                     xpress themself in the website, then connect with other people.
 
                                     <br>
                                     <br>
 
-                                    In addition, to add a more "welcoming" vibe, I will add a short message of something
+                                    In addition, to add a more "welcoming" vibe, I will add a short message of
+                                    something
                                     like "Join a community that celebrates culture and connection".
 
                                     Below are some examples of how the text will look like in the homepage.
@@ -263,7 +287,8 @@
                                     </li>
                                     <br>
                                     <li>
-                                        In Event descriptions (OZvents), use "Participants" or "attendees" not gendered
+                                        In Event descriptions (OZvents), use "Participants" or "attendees" not
+                                        gendered
                                         terms
                                     </li>
                                     <br>
@@ -304,7 +329,17 @@
 
             </section>
 
-            <section class="accordion p-t-8">
+            <section class="m-t-12">
+                <h3 class="m-t-8 m-b-2">
+                    Seeing Ourselves in the Interface
+                </h3>
+                <p class="m-b-4">
+                    This Accordion component below will show an example of a dynamic list of community cards,
+                    to allow users to see themselves and their community through real contributions.
+                </p>
+            </section>
+
+            <section class="accordion">
                 <div class="accordion-item open">
                     <button class="accordion-header">▷ Seeing Ourselves in the Interface</button>
                     <div class="accordion-content">
