fix: color contrast

--- a/work_phase_3/behavioural_design.html
+++ b/work_phase_3/behavioural_design.html
@@ -202,13 +202,13 @@ On creating the Card component, the WCAG principles of Meaningful Sequence is im
                                 <input type="file" id="photo" name="photo" class="form-file" accept="image/*"
                                     aria-describedby="photo-help photo-error">
                                 <label for="photo" class="file-upload-label" tabindex="0">
-                                    <span class="file-upload-icon" aria-hidden="true">📷</span>
-                                    <span class="file-upload-text">Choose a photo</span>
+                                    <span class="file-upload-icon" aria-hidden="true">📷 </span>
+                                    <span class="file-upload-text"> &nbsp; Choose a photo</span>
                                     <span class="file-upload-button">Browse</span>
                                 </label>
                             </div>
                             <span id="photo-help" class="form-help">
-                                <span class="help-icon" aria-hidden="true">🖼️</span>
+                                <span class="help-icon" aria-hidden="true">🖼️ </span>
                                 Optional: Upload an image (max 10MB)
                             </span>
                             <span id="photo-error" class="error-message" role="alert" aria-live="assertive"></span>
