--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -132,7 +132,7 @@
                                 <div class="swatch primary-color"></div>
                                 <div class="color-info">
                                     <h5>Primary</h5>
-                                    <p class="color-code">#8B4513</p>
+                                    <p class="color-code">#7A3A0F</p>
                                     <p class="color-usage">Major headings, primary buttons, nav highlights</p>
                                 </div>
                             </div>
@@ -140,7 +140,7 @@
                                 <div class="swatch secondary-color"></div>
                                 <div class="color-info">
                                     <h5>Secondary</h5>
-                                    <p class="color-code">#D2691E</p>
+                                    <p class="color-code">#B85C1F</p>
                                     <p class="color-usage">Borders & Dividers, secondary buttons, call to action texts
                                     </p>
                                 </div>
@@ -157,7 +157,7 @@
                                 <div class="swatch accent-color-bg"></div>
                                 <div class="color-info">
                                     <h5>Accent background</h5>
-                                    <p class="color-code">#FFD4B2</p>
+                                    <p class="color-code">#FFE5D0</p>
                                     <p class="color-usage">Subtle Highlight Backgrounds, Hovers</p>
                                 </div>
                             </div>
@@ -171,15 +171,25 @@
                                 <div class="swatch text-color"></div>
                                 <div class="color-info">
                                     <h5>Text</h5>
-                                    <p class="color-code">#333333</p>
+                                    <p class="color-code">#1A1410</p>
                                     <p class="color-usage">All body text, paragraphs, lists, form labels</p>
+                                </div>
+                            </div>
+                            <div class="color-swatch">
+                                <div class="swatch text-color"></div>
+                                <div class="color-info">
+                                    <h5>Text on dark</h5>
+                                    <p class="color-code">#FFFFFF</p>
+                                    <p class="color-usage">
+                                        Text on dark backgrounds, buttons, navbars
+                                    </p>
                                 </div>
                             </div>
                             <div class="color-swatch">
                                 <div class="swatch background-color"></div>
                                 <div class="color-info">
                                     <h5>Background</h5>
-                                    <p class="color-code">#f5f5f5</p>
+                                    <p class="color-code">#FAF7F2</p>
                                     <p class="color-usage">Page background, card backgrounds, light sections
                                     </p>
                                 </div>
@@ -242,7 +252,7 @@
                             <h4>Heading 4</h4>
                             <div class="type-details">
                                 <h4>1rem</h4>
-                                <p class="type-weight">Bold</p>
+                                <p class="type-weight">font-weight: 600</p>
                                 <p class="type-usage">Minor Subsections / Card Headers</p>
                             </div>
                         </div>
@@ -251,7 +261,7 @@
                             <h5>Heading 5</h5>
                             <div class="type-details">
                                 <h4 class="type-size">0.875rem</h4>
-                                <p class="type-weight">Bold</p>
+                                <p class="type-weight">font-weight: 700;</p>
                                 <p class="type-usage">Tiny labels, tags, overlines</p>
                             </div>
                         </div>
