fix: minor improvement in sitemap page

--- a/work_phase_3/index.html
+++ b/work_phase_3/index.html
@@ -36,8 +36,12 @@
     </nav>
 
     <main>
-        <div class="container">
-            <h1>WP3 Home Page</h1>
+        <div class="container ">
+            <h2 class="p-t-12">Work Phase 3 Home Page</h2>
+
+            <p class="p-t-4">Welcome to the Work Phase 3 home page. Use the navbar to explore the various
+                pages of this project, including the site map, style guide, ethical response, and generative AI
+                acknowledgement.</p>
         </div>
     </main>
 
