--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -39,9 +39,18 @@
     <main>
         <div class="container">
             <section class="sitemap">
-                <h1>Sitemap for the "FeedCrumbs" project</h1>
+                <h2>Sitemap for the "FeedCrumbs" project</h2>
+                <p class="p-y-4">
+                    Below is the sitemap for my project, "FeedCrumbs". This sitemap outlines the structure and
+                    organization of the website.
+                </p>
+
                 <img src="assets/sitemap.png" alt="Image of my created sitemap" class="responsive-img" />
             </section>
+
+            <h3>
+                Annotations for each page in the sitemap
+            </h3>
 
             <section class="accordion m-y-5 p-b-20">
                 <div class="accordion-item open">
