fix: visceral design colors

--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -176,7 +176,7 @@
                                 </div>
                             </div>
                             <div class="color-swatch">
-                                <div class="swatch text-color"></div>
+                                <div class="swatch text-color-dark"></div>
                                 <div class="color-info">
                                     <h5>Text on dark</h5>
                                     <p class="color-code">#FFFFFF</p>
