feat: ethical analysis

--- a/work_phase_3/ethical_response.html
+++ b/work_phase_3/ethical_response.html
@@ -64,6 +64,44 @@
                 </p>
             </section>
 
+            <section class="accordion m-y-5 p-b-8">
+                <div class="accordion-item open">
+                    <button class="accordion-header">▷ Ethical Analysis</button>
+                    <div class="accordion-content">
+                        <p class="p-b-3">
+                            After some careful considerations of your newsletter plugin, we have point out several
+                            significant ethical concerns that we have to pay attention to. These concerns rooted from
+                            the principles in the ACS Code of Professional Ethics, especially regarding the Value of
+                            Trustworthiness, Respect, and The Primacy of the Public Interest.
+
+                        </p>
+
+                        <div class="accordion nested p-b-4">
+                            <div class="accordion-item">
+                                <button class="accordion-header">▷ Privacy and Data Minimization Concerns</button>
+                                <div class="accordion-content">
+                                    <p>
+                                        From the client brief, the plugin includes several personal data that was not
+                                        described how its going to be relevant with the goal of the project. Data such
+                                        as annual income, credit cards, gender,spending habits, monthly dining
+                                        expenditure
+                                        will raise serious questions by the users regarding how the data will be used.
+                                        According
+                                        to the ACS principle of trustworthiness, professionals are ought to respect
+                                        privacy and
+                                        data confidentiality, especially personal data. The current data collected
+                                        planned in the
+                                        client brief are cleary appears unnecesarry and invasive.
+                                    </p>
+
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
 
         </div>
     </main>
