feat: consensual issue

--- a/work_phase_3/ethical_response.html
+++ b/work_phase_3/ethical_response.html
@@ -93,11 +93,26 @@
                                         planned in the
                                         client brief are cleary appears unnecesarry and invasive.
                                     </p>
-
-
+                                </div>
+                            </div>
+                            <div class="accordion-item p-t-4">
+                                <button class="accordion-header">▷ Consensual Issue</button>
+                                <div class="accordion-content">
+                                    The client brief noted that the informations gathered from the form will help
+                                    understand the users for future planning. After careful look, this argument has not
+                                    been supported with some spesific explanation. This in turn will make it hard
+                                    for us to justify to the users on why and how the data such as "spending habits"
+                                    will be used, stored, or shared. The ACS Code mentioned that the importance of
+                                    how we as a professional must maintain honesty in designing our products or
+                                    services.
+                                    Without clear disclosure on how we are going to use these personal data will raise
+                                    high concerns to the users, and therefore might hinder user participation in the
+                                    project.
                                 </div>
                             </div>
                         </div>
+
+
                     </div>
                 </div>
             </section>
