feat: Discrimination Potential

--- a/work_phase_3/ethical_response.html
+++ b/work_phase_3/ethical_response.html
@@ -72,7 +72,7 @@
                             After some careful considerations of your newsletter plugin, we have point out several
                             significant ethical concerns that we have to pay attention to. These concerns rooted from
                             the principles in the ACS Code of Professional Ethics, especially regarding the Value of
-                            Trustworthiness, Respect, and The Primacy of the Public Interest.
+                            Trustworthiness, Honesty, and Respect.
 
                         </p>
 
@@ -110,9 +110,21 @@
                                     project.
                                 </div>
                             </div>
+
+                            <div class="accordion-item p-t-4">
+                                <button class="accordion-header">▷ Discrimination Potential</button>
+                                <div class="accordion-content">
+                                    Some of the used personal data in the plugin, such as sexuality, gender, and annual
+                                    income could be a major vulnerability for the community members. Given that your
+                                    organization will serve multiple diverse communities, and some of them which may
+                                    have a systemic disadvantage, collecting this kind of data might pose a big threat
+                                    for them if those data somehow leaked inside or outside of the website that we want
+                                    to create. As the ACS principle of respect mentioned, respect for others is an
+                                    essential principle and we have to minimize any harm to stakeholders, including the
+                                    personal data of the users.
+                                </div>
+                            </div>
                         </div>
-
-
                     </div>
                 </div>
             </section>
