fix: sentences strcuture

--- a/work_phase_3/ethical_response.html
+++ b/work_phase_3/ethical_response.html
@@ -105,9 +105,9 @@
                                     will be used, stored, or shared. The ACS Code mentioned that the importance of
                                     how we as a professional must maintain honesty in designing our products or
                                     services.
-                                    Without clear disclosure on how we are going to use these personal data will raise
-                                    high concerns to the users, and therefore might hinder user participation in the
-                                    project.
+                                    Lack of clear disclosure on how we are going to use these personal data will
+                                    raise high concerns to the users, and therefore might hinder user participation in
+                                    the project.
                                 </div>
                             </div>
 
