feat: Data Minimization reccommendation

--- a/work_phase_3/ethical_response.html
+++ b/work_phase_3/ethical_response.html
@@ -129,6 +129,49 @@
                 </div>
             </section>
 
+            <section class="accordion m-y-5 p-b-8">
+                <div class="accordion-item open">
+                    <button class="accordion-header">▷ Reccommendation</button>
+                    <div class="accordion-content">
+                        <p class="p-b-3">
+                            To address the ethical concerns that I have mentioned above, while also still meeting your
+                            organization goals and funder requirements, I will list some concrete reccommendation steps
+                            that propose balanced solution that protect our potential users and also maintaining the
+                            plugin purpose.
+                        </p>
+
+                        <div class="accordion nested p-b-4">
+                            <div class="accordion-item">
+                                <button class="accordion-header">▷ Data Minimization</button>
+                                <div class="accordion-content">
+                                    <p>
+                                        We can work together to compromise with the funder to limit the scope of data
+                                        collection by only use the necessary and appropiate data. My proposal for the
+                                        data collected is Name (with an option to use preferred name), email address,
+                                        and community interest.
+
+                                        This will enable our newsletter plugin to still give us meaningul information
+                                        into the potential users, and minimizing the potential risks. By using this, we
+                                        still can keep the newsletter subscription feature by sending emails to the
+                                        users, and also
+                                        gaining the core information that we need, which is name and the preferred
+                                        community. For additional information, we in the future can use the publicly and
+                                        consentually created informations by the users, such as public interactions,
+                                        events created, activity patterns, that could also be inferred after the service
+                                        has been generally used. By using a public and consensual data from the user, we
+                                        can have even more greater insight due to the volume, and also the genuine
+                                        activities by the users.
+                                    </p>
+
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
 
         </div>
     </main>
