feat: Improved Transparency and Consent reccommendation

--- a/work_phase_3/ethical_response.html
+++ b/work_phase_3/ethical_response.html
@@ -162,10 +162,24 @@
                                         can have even more greater insight due to the volume, and also the genuine
                                         activities by the users.
                                     </p>
-
-
                                 </div>
+                            </div>
 
+                            <div class="accordion-item p-t-4">
+                                <button class="accordion-header">▷ Improved Transparency and Consent</button>
+                                <div class="accordion-content">
+                                    In order to maintain transparency and consent, we can propose to your funder to use
+                                    alternative methods to gain insights. Other than one of the solution that I have
+                                    mentioned
+                                    above by using the user activities data, we can also conduct a periodic demographic
+                                    surveys
+                                    with cear research ethics methods and consent forms. By doing this, not only we can
+                                    have
+                                    a quantitative data, we can also gain a deeper understanding by doing qualitiatve
+                                    data gathering
+                                    activites, for example doing interviews to the community representatives within the
+                                    comunity.
+                                </div>
                             </div>
                         </div>
                     </div>
