feat: improve reccommendation

--- a/work_phase_3/ethical_response.html
+++ b/work_phase_3/ethical_response.html
@@ -174,11 +174,17 @@
                                     above by using the user activities data, we can also conduct a periodic demographic
                                     surveys
                                     with cear research ethics methods and consent forms. By doing this, not only we can
-                                    have
-                                    a quantitative data, we can also gain a deeper understanding by doing qualitiatve
-                                    data gathering
-                                    activites, for example doing interviews to the community representatives within the
-                                    comunity.
+                                    have a quantitative data, we can also gain a deeper understanding by doing
+                                    qualitiatve data gathering activites, for example doing interviews to the community
+                                    representatives within the comunity.
+
+                                    <br>
+                                    <br>
+
+                                    Furtheremore, by doing a periodic demographic surveys or interviews, we can tailor
+                                    the questions asked to be more spesific, and based on the actual needs of you and
+                                    the funder. So not only you will have more data, you will also have better quality
+                                    of the data since we are simply asking the right questions to the users.
                                 </div>
                             </div>
                         </div>
