feat: Client Perspective

--- a/work_phase_3/ethical_response.html
+++ b/work_phase_3/ethical_response.html
@@ -192,6 +192,63 @@
                 </div>
             </section>
 
+            <section class="accordion m-y-5 p-b-20">
+                <div class="accordion-item open">
+                    <button class="accordion-header">▷ Client Perspective</button>
+                    <div class="accordion-content">
+                        <p class="p-b-3">
+                            I understand that in order to consider my reccommendation, you will have to compromise with
+                            your funder. This is a legitimate concern from your end, and we are here to help.
+                        </p>
+
+                        <div class="accordion nested p-b-4">
+                            <div class="accordion-item">
+                                <button class="accordion-header">▷ Regarding Funder Requirements</button>
+                                <div class="accordion-content">
+                                    <p>
+                                        In my perspective, more and more stakeholders such as funders are becoming more
+                                        recognizing about the data security, especially in the age of many cyber
+                                        threats, and data breaches. I believe that Organization that create a feeling of
+                                        safe to the users will not only benefitted themself, but also the image of all
+                                        the parties involved, hence will have a greater long term impact. Furtheremore,
+                                        presenting a safe and private design approach will give CCI impression as a
+                                        leader in the ethical community development, and therefore might attract even
+                                        more funding from other sources.
+                                    </p>
+                                </div>
+                                <div class="accordion-item p-t-4">
+                                    <button class="accordion-header">▷ Regarding Impact Measurement</button>
+                                    <div class="accordion-content">
+                                        My granular periodic reccommendation on how we collect data will provide,
+                                        richer,
+                                        more actionable insights than only just numbers with no significant value for
+                                        it. The goal of data collection is not the number and how many data we have, but
+                                        most importantly is to gain deeper insight on our potential users. Hence, doing
+                                        a periodic, effective surveys, interviews, activity studies, will do far more
+                                        greater than we can imagine.
+
+
+                                    </div>
+                                </div>
+
+
+                                <div class="accordion-item p-t-4">
+                                    <button class="accordion-header">▷ Regarding Technical Implementation</button>
+                                    <div class="accordion-content">
+                                        Modify the plugin usage to only collect minimal data is not only technically a
+                                        straightforward process, but will probably make the implementation cheaper and
+                                        faster. This could be possible since we reduce our data security obligations,
+                                        and also
+                                        other mitigation planning on the risks we might have if we collect many personal
+                                        users data
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
 
         </div>
     </main>
