fix: minor wordings

--- a/work_phase_3/style_guide.html
+++ b/work_phase_3/style_guide.html
@@ -76,9 +76,9 @@
                             and interaction patterns. Includes how users navigate and interact with the design.
                         </p>
                         <ul class="design-features">
-                            <li>Navigation and user flows</li>
+                            <li>Buttons</li>
                             <li>High fidelity components</li>
-                            <li>Responsive design patterns</li>
+                            <li>Forms</li>
                         </ul>
                         <button class="m-t-4 button button-primary">
                             <a href="behavioural_design.html">Learn More</a>
@@ -96,9 +96,9 @@
                             perceive the brand and their emotional connection to it.
                         </p>
                         <ul class="design-features">
-                            <li>Content strategy and messaging</li>
-                            <li>Brand identity and values</li>
-                            <li>User engagement and retention</li>
+                            <li>Values Mapping</li>
+                            <li>Identity</li>
+                            <li>Accessibility Audit</li>
                         </ul>
                         <button class="m-t-4 button button-primary">
                             <a href="reflective_design.html">Learn More</a>
